--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
   	<module>02_Variables</module>
   </modules>
   <properties>
-       <maven.compiler.source>
-       15
-       </maven.compiler.source>
+       <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
+       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 </project>
