les operateurs logiques

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <modules>
   	<module>01_Introduction</module>
   	<module>02_Variables</module>
+  	<module>03_Operateurs</module>
   </modules>
   <properties>
        <maven.compiler.source>15</maven.compiler.source>
